--- a/src/scss/globals/base/_typography.scss
+++ b/src/scss/globals/base/_typography.scss
@@ -1,29 +1,29 @@
 h1,
-:global(.f1) { 
+.f1 {
 	font-size: rem(48); 
 }
 
 h2,
-:global(.f2) { 
+.f2 {
 	font-size: rem(36); 
 }
 
 h3,
-:global(.f3) { 
+.f3 {
 	font-size: rem(24); 
 }
 
 h4,
-:global(.f4) {  
+.f4 {
 	font-size: rem(20); 
 }
 
 h5,
-:global(.f5) { 
+.f5 {
 	font-size: rem(16); 
 }
 
 h6,
-:global(.f6) { 
+.f6 {
 	font-size: rem(14); 
 }
