change names to avoid collision

--- a/src/scss/globals/base/_typography.scss
+++ b/src/scss/globals/base/_typography.scss
@@ -1,29 +1,29 @@
 h1,
-.f1 {
+.heading-one {
 	font-size: rem(48); 
 }
 
 h2,
-.f2 {
+.heading-two {
 	font-size: rem(36); 
 }
 
 h3,
-.f3 {
+.heading-three {
 	font-size: rem(24); 
 }
 
 h4,
-.f4 {
+.heading-four {
 	font-size: rem(20); 
 }
 
 h5,
-.f5 {
+.heading-five {
 	font-size: rem(16); 
 }
 
 h6,
-.f6 {
+.heading-six {
 	font-size: rem(14); 
 }
